--- a/Readme.org
+++ b/Readme.org
@@ -928,12 +928,14 @@ Some extra variables I like
 region (=symbol → expression → block → function=).
 
 #+begin_src emacs-lisp
-(use-package expand-region
-  :after treesit
-  :bind (("H-e" . er/expand-region)
-         ("H-E" . er/contract-region))
-  :custom
-  (expand-region-fast-keys-enabled nil))
+  (use-package expand-region
+    :after treesit
+    :bind (("H-e" . er/expand-region)
+           ("H-E" . er/contract-region))
+    :custom
+    (expand-region-fast-keys-enabled nil))
+#+end_src
+
 #+end_src
 
 * Search and replace
@@ -949,23 +951,23 @@ The idea is:
 ** Consult ripgrep
 
 #+begin_src emacs-lisp
-(defun fiachetti/consult-ripgrep-project ()
-  "Search the current project with ripgrep, seeded with symbol at point."
-  (interactive)
-  (consult-ripgrep
-   (consult--project-root)
-   (thing-at-point 'symbol t)))
+  (defun fiachetti/consult-ripgrep-project ()
+    "Search the current project with ripgrep, seeded with symbol at point."
+    (interactive)
+    (consult-ripgrep
+     (consult--project-root)
+     (thing-at-point 'symbol t)))
 
-(defun fiachetti/consult-ripgrep-dir ()
-  "Search the current directory with ripgrep, seeded with symbol at point."
-  (interactive)
-  (consult-ripgrep
-   default-directory
-   (thing-at-point 'symbol t)))
+  (defun fiachetti/consult-ripgrep-dir ()
+    "Search the current directory with ripgrep, seeded with symbol at point."
+    (interactive)
+    (consult-ripgrep
+     default-directory
+     (thing-at-point 'symbol t)))
 
-(with-eval-after-load 'consult
-  (keymap-global-set "H-g" #'fiachetti/consult-ripgrep-project)
-  (keymap-global-set "H-G" #'fiachetti/consult-ripgrep-dir))
+  (with-eval-after-load 'consult
+    (keymap-global-set "H-g" #'fiachetti/consult-ripgrep-project)
+    (keymap-global-set "H-G" #'fiachetti/consult-ripgrep-dir))
 #+end_src
 
 ** Exporting results with Embark
@@ -981,8 +983,8 @@ exactly the same matches shown by Consult.
 This functionality is provided by `embark-consult`.
 
 #+begin_src emacs-lisp
-(use-package embark-consult
-  :after (embark consult))
+  (use-package embark-consult
+    :after (embark consult))
 #+end_src
 
 ** Editing matches with wgrep
@@ -994,12 +996,12 @@ editing matches directly and applying the changes back to the files.
 - Saving the buffer applies the changes
 
 #+begin_src emacs-lisp
-(use-package wgrep
-  :after grep
-  :bind (:map grep-mode-map
-              ("C-c C-e" . wgrep-change-to-wgrep-mode))
-  :config
-  (setq wgrep-auto-save-buffer t))
+  (use-package wgrep
+    :after grep
+    :bind (:map grep-mode-map
+                ("C-c C-e" . wgrep-change-to-wgrep-mode))
+    :config
+    (setq wgrep-auto-save-buffer t))
 #+end_src
 
 * Tree-sitter support
