--- a/Readme.org
+++ b/Readme.org
@@ -936,6 +936,22 @@ region (=symbol → expression → block → function=).
     (expand-region-fast-keys-enabled nil))
 #+end_src
 
+* Multiple cursors
+
+Multiple cursors allow performing the same edit in multiple places simultaneously.
+
+This setup preserves existing muscle memory while keeping the configuration clean and modern.
+
+#+begin_src emacs-lisp
+  (use-package multiple-cursors
+    :bind (("C-c a"   . mc/mark-all-like-this)
+           ("C-c C-a" . mc/edit-lines)
+
+           ("H-." . mc/mark-next-like-this)
+           ("H-," . mc/mark-previous-like-this)
+           ("H->" . mc/skip-to-next-like-this)
+
+           ("H-<mouse-1>" . mc/add-cursor-on-click)))
 #+end_src
 
 * Search and replace
