--- a/Readme.org
+++ b/Readme.org
@@ -83,20 +83,21 @@ Small interface tweaks to simplify the look and feel
 
 ** Theme
 
-*** ir-black
+Install doom themes and use =doom-ir-black=
 
 #+begin_src emacs-lisp
-  (use-package ir-black-theme
-    :ensure t
-    :config
-    (load-theme 'ir-black t))
-#+end_src
+(use-package doom-themes
+  :init
+  ;; These affect how faces are generated
+  (setq doom-themes-enable-bold t
+        doom-themes-enable-italic t)
 
-*** Disable other themes
+  :config
+  ;; Load ir-black explicitly
+  (load-theme 'doom-ir-black t)
 
-#+begin_src emacs-lisp
-  (mapc #'disable-theme custom-enabled-themes)
-  (load-theme 'ir-black t)
+  ;; Optional: improve org-mode visuals slightly
+  (doom-themes-org-config))
 #+end_src
 
 ** Indentation Guides
